<resources>
   <string name="account_deletion_api_key_info">This feature is not enabled for all API keys. Please contact your DriveQuant contact if you are interested in changing this configuration.</string>
   <string name="account_deletion_confirmation">Delete your account permanently?\nThis action is not reversible.</string>
   <string name="account_deletion_content_1">If you confirm your choice, you will be automatically logged out and the account deletion request will be taken into account.</string>
   <string name="account_deletion_content_2">You have 30 days to re-login to the application. If you reconnect within 30 days, the account deletion request will be cancelled.\n\nAfter this time, if you do not log back in, all your data will be permanently deleted.\n\nThe deletion of your data is not reversible.</string>
   <string name="account_deletion_error_forbidden">The account deletion feature is disabled for your API key.\nPlease contact your DriveQuant contact if you want to enable it.</string>
   <string name="app_name">DriveKit Demo App</string>
   <string name="authentication_description">To initialize the DriveKit SDK, it is essential to configure a unique identifier for each user.\n\nWe recommend that you enter an anonymous identifier and never use a phone number or an email address.</string>
   <string name="authentication_error">Invalid login</string>
   <string name="authentication_header">User identification</string>
   <string name="authentication_title">Please enter a unique user ID</string>
   <string name="authentication_unique_identifier">Unique identifier</string>
   <string name="button_delete_account">Delete my account</string>
   <string name="button_logout">LOG OUT</string>
   <string name="button_next_step">Go to the next step</string>
   <string name="button_see_documentation">SEE THE DOCUMENTATION</string>
   <string name="button_see_feature">SEE THE FUNCTION</string>
   <string name="button_see_features">SEE THE FEATURES</string>
   <string name="button_stop">Stop</string>
   <string name="button_validation">VALIDATE</string>
   <string name="cancel_trip">Cancel the trip</string>
   <string name="client_error">An error has occurred, please try again later.</string>
   <string name="dashboard_header">Dashboard</string>
   <string name="delete_account_header">Account Deletion</string>
   <string name="drivekit_doc_android_badges">https://docs.drivequant.com/driver-achievement/user-interface/android#select-badges-categories</string>
   <string name="drivekit_doc_android_challenges">https://docs.drivequant.com/challenge/user-interface/android/get-started#display-challenge-list</string>
   <string name="drivekit_doc_android_diag">https://docs.drivequant.com/permissions-utils/permission-utils/android/main-configuration#sdk-diagnosis</string>
   <string name="drivekit_doc_android_driver_data">https://docs.drivequant.com/driver-data/user-interface/android/get-started</string>
   <string name="drivekit_doc_android_github_ui">https://github.com/DriveQuantPublic/drivekit-ui-android</string>
   <string name="drivekit_doc_android_location_sharing">https://docs.drivequant.com/trip-analysis/user-interface/android/location-sharing</string>
   <string name="drivekit_doc_android_odometer">https://docs.drivequant.com/vehicle/user-interface/android/main-configurations#vehicle-mileage-tracking-and-editing</string>
   <string name="drivekit_doc_android_permissions_management">https://docs.drivequant.com/permissions-utils/permission-utils/android/main-configuration#permission-management</string>
   <string name="drivekit_doc_android_permissions_utils">https://docs.drivequant.com/permissions-utils/permission-utils/android/main-configuration#permission-management</string>
   <string name="drivekit_doc_android_profile">https://docs.drivequant.com/driver-data/user-interface/android/my-driver-profile</string>
   <string name="drivekit_doc_android_ranking">https://docs.drivequant.com/driver-achievement/user-interface/android#select-ranking-themes</string>
   <string name="drivekit_doc_android_streaks">https://docs.drivequant.com/driver-achievement/user-interface/android#select-streak-themes</string>
   <string name="drivekit_doc_android_synthesis">https://docs.drivequant.com/driver-data/user-interface/android/my-synthesis</string>
   <string name="drivekit_doc_android_timeline">https://docs.drivequant.com/driver-data-timeline-ui/android/get-started</string>
   <string name="drivekit_doc_android_update_user_info">https://docs.drivequant.com/get-started-drivekit/android/advanced-configurations#update-users-information</string>
   <string name="drivekit_doc_android_user_id">https://docs.drivequant.com/get-started-drivekit/android/quick-start#set-a-user-id</string>
   <string name="drivekit_doc_android_vehicle">https://docs.drivequant.com/vehicle/user-interface/android/get-started#display-vehicle-picker</string>
   <string name="drivekit_doc_android_vehicle_list">https://docs.drivequant.com/vehicle/user-interface/android/get-started#display-vehicle-list</string>
   <string name="drivekit_doc_android_working_hours">https://docs.drivequant.com/trip-analysis/user-interface/android/working-hours</string>
   <string name="drivekit_doc_ios_badges">https://docs.drivequant.com/driver-achievement/user-interface/ios#select-badges-categories</string>
   <string name="drivekit_doc_ios_challenges">https://docs.drivequant.com/challenge/user-interface/ios/get-started#display-challenge-list</string>
   <string name="drivekit_doc_ios_diag">https://docs.drivequant.com/permissions-utils/permission-utils/ios/main-configurations#sdk-diagnosis</string>
   <string name="drivekit_doc_ios_driver_data">https://docs.drivequant.com/driver-data/user-interface/ios/get-started</string>
   <string name="drivekit_doc_ios_github_ui">https://github.com/DriveQuantPublic/drivekit-ui-ios</string>
   <string name="drivekit_doc_ios_location_sharing">https://docs.drivequant.com/trip-analysis/user-interface/ios/location-sharing</string>
   <string name="drivekit_doc_ios_odometer">https://docs.drivequant.com/vehicle/user-interface/ios/main-configurations#vehicle-mileage-tracking-and-editing</string>
   <string name="drivekit_doc_ios_permissions_management">https://docs.drivequant.com/permissions-utils/permission-utils/ios/main-configurations#permission-management</string>
   <string name="drivekit_doc_ios_permissions_utils">https://docs.drivequant.com/permissions-utils/permission-utils/ios/main-configurations#permission-management</string>
   <string name="drivekit_doc_ios_profile">https://docs.drivequant.com/driver-data/user-interface/ios/my-driver-profile</string>
   <string name="drivekit_doc_ios_ranking">https://docs.drivequant.com/driver-achievement/user-interface/ios#select-ranking-themes</string>
   <string name="drivekit_doc_ios_streaks">https://docs.drivequant.com/driver-achievement/user-interface/ios#select-streak-themes</string>
   <string name="drivekit_doc_ios_synthesis">https://docs.drivequant.com/driver-data/user-interface/ios/my-synthesis</string>
   <string name="drivekit_doc_ios_timeline">https://docs.drivequant.com/driver-data-timeline-ui/ios/get-started</string>
   <string name="drivekit_doc_ios_update_user_info">https://docs.drivequant.com/get-started-drivekit/ios/advanced-configurations#update-users-information</string>
   <string name="drivekit_doc_ios_user_id">https://docs.drivequant.com/get-started-drivekit/ios/quick-start#identify-the-user</string>
   <string name="drivekit_doc_ios_vehicle">https://docs.drivequant.com/vehicle/user-interface/ios/get-started#display-vehicle-picker-in-navigation-controller</string>
   <string name="drivekit_doc_ios_vehicle_list">https://docs.drivequant.com/vehicle/user-interface/ios/get-started#display-vehicle-list-in-navigation-controller</string>
   <string name="drivekit_doc_ios_working_hours">https://docs.drivequant.com/trip-analysis/user-interface/ios/working-hours</string>
   <string name="feature_badges_description">The Driver Achievement component contains a function to reward driver achievements with badges. Badges are awarded according to driving scores.</string>
   <string name="feature_badges_title">Driver Achievement | Badges</string>
   <string name="feature_challenges_description">The driving challenge is a one-time event during which drivers compete to get the best driving score. The Challenge component includes several themes: eco-driving, safety, distraction and speed limit.</string>
   <string name="feature_challenges_title">Challenge | List and results</string>
   <string name="feature_list">List of features</string>
   <string name="feature_list_description">DriveKit is a rich and versatile SDK that includes phone sensor analysis, driving data display, driver coaching and gamification features. Discover these features before embedding in your app 🚀.</string>
   <string name="feature_location_sharing_description">The Trip Analysis component includes a function to reassure the user\'s family and friends while driving, thanks to a shared link that displays the vehicle\'s location during trips.</string>
   <string name="feature_location_sharing_title">Trip Analysis | Location Sharing</string>
   <string name="feature_permission_onboarding_ok">The onboarding permissions is not available because you have already granted all permissions.</string>
   <string name="feature_permission_utils_description">The Permissions Utils component contains a diagnostic function to check the status of sensors and permissions. This component alerts the user and guides him to set up his phone.</string>
   <string name="feature_permission_utils_onboarding_description">The Permissions Utils component contains screens that display the permission requests that are essential for automatic mode operation and data analysis. We recommend that you use this component or replicate it in your app.</string>
   <string name="feature_permission_utils_onboarding_title">Permissions Utils | Onboarding permissions</string>
   <string name="feature_permission_utils_title">Permissions Utils | App diagnostic</string>
   <string name="feature_profile_description">The Driver Data component displays the driver profile based on the driver\'s history. The driver profile is composed of several faces that reflect driving habits: the annual driving distance, the mobility radius, the activity level, the regularity and the main road context.</string>
   <string name="feature_profile_title">Driver Data | My driver profile</string>
   <string name="feature_ranking_description">The Driver Achievement component displays rankings by time period and by score. The driver can visualise his rank and compare his driving performance with his community.</string>
   <string name="feature_ranking_title">Driver Achievement | Rankings</string>
   <string name="feature_streaks_description">Combos reward drivers who manage to complete several consecutive trips with high scores. To install this feature in your app, see the documentation for the Drivers Achievement component.</string>
   <string name="firstname">First name</string>
   <string name="lastname">Last name</string>
   <string name="parameters_account_description">A user has an anonymous unique identifier (userId). Optionally, you can add information to the user\'s account such as first name, last name and a nickname.</string>
   <string name="parameters_notification_description">Find out how to configure the notifications sent by the DriveKit SDK during and after the analysis of a trip.</string>
   <string name="pseudo">Pseudo</string>
   <string name="see_settings">Go to the settings</string>
   <string name="userId">UserId</string>
   <string name="user_info_description">You can add information to a user\'s account such as first name, last name, and pseudo.\n\nThis data is optional and you can skip this step.</string>
   <string name="user_info_title">User information</string>
</resources>