<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.drivekit.demoapp.onboarding.activity.UserInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/dk_layout_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dk_margin_double"
            android:orientation="vertical"
            android:paddingStart="@dimen/dk_margin"
            android:paddingEnd="@dimen/dk_margin">

            <TextView
                android:id="@+id/text_view_user_info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dk_margin_double"
                android:textColor="@color/mainFontColor"
                android:textSize="@dimen/dk_text_medium"
                android:textStyle="bold"
                tools:text="@string/user_info_title" />

            <TextView
                android:id="@+id/text_view_user_info_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dk_margin"
                android:textColor="@color/complementaryFontColor"
                tools:text="@string/user_info_description" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dk_margin"
                android:hint="@string/firstname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_view_firstname_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/dk_text_normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dk_margin"
                android:hint="@string/lastname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_view_lastname_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/dk_text_normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_pseudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dk_margin"
                android:hint="@string/pseudo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_view_pseudo_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/dk_text_normal" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <include
            layout="@layout/layout_button_primary_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.drivequant.drivekit.common.ui.component.DKButtonSecondary
            android:id="@+id/button_next_step"
            style="@style/DKButton.Secondary"
            android:layout_marginHorizontal="@dimen/dk_margin"
            android:layout_marginTop="@dimen/dk_margin_medium"
            android:text="@string/button_next_step" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>
