<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/dk_layout_toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/dk_screen_border">

            <ImageView
                android:id="@+id/image_view_warning"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dk_margin_double"
                android:contentDescription="image"
                android:src="@drawable/ic_warning"
                app:layout_constraintBottom_toTopOf="@+id/text_view_warning_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <TextView
                android:id="@+id/text_view_warning_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dk_margin_double"
                android:text="@string/account_deletion_content_1"
                app:layout_constraintBottom_toTopOf="@+id/text_view_explaining_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_view_explaining_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dk_margin_double"
                android:text="@string/account_deletion_content_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.drivequant.drivekit.common.ui.component.DKButtonPrimary
                android:id="@+id/button_cancel_account_deletion"
                style="@style/DKButton"
                android:layout_marginTop="@dimen/dk_margin"
                android:text="@string/dk_common_cancel"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/button_delete_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dk_margin"
                android:text="@string/button_delete_account"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/dk_text_medium" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_circular"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>
